sample/retrieveUnpackaged/objects/Segment__c.object
<CustomObject>
    <fields>
        <fullName>Background_Colour__c</fullName>
        <inlineHelpText>Specify the hex colour code for the segment. (e.g. FF0000 for Red). Exclude the &quot;#&quot;</inlineHelpText>
        <label>Background Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Display image for the segment, used on the CustomerSegmentEntry and CustomerVerification pages.</description>
        <inlineHelpText>Display image for the segment, used on the CustomerSegmentEntry and CustomerVerification pages.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Intercept__c</fullName>
        <label>Intercept</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Sub Segments</relationshipLabel>
        <relationshipName>Sub_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Segment_Name_Image_URL__c</fullName>
        <label>Segment Name Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Text_Colour__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <inlineHelpText>Text color</inlineHelpText>
        <label>Text Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>Profile__c</columns>
        <columns>Parent_Segment__c</columns>
        <columns>Image__c</columns>
        <columns>Segment_Name_Image_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>